update credentials to true
